<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <Button
            android:id="@+id/button1"
            android:text="@string/key_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button2"
            android:text="@string/key_2"
            app:layout_constraintStart_toEndOf="@id/button1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button3"
            android:text="@string/key_3"
            app:layout_constraintStart_toEndOf="@id/button2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button4"
            android:text="@string/key_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button5"
            android:text="@string/key_5"
            app:layout_constraintStart_toEndOf="@id/button4"
            app:layout_constraintTop_toBottomOf="@id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button6"
            android:text="@string/key_6"
            app:layout_constraintStart_toEndOf="@id/button5"
            app:layout_constraintTop_toBottomOf="@id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button7"
            android:text="@string/key_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button8"
            android:text="@string/key_8"
            app:layout_constraintStart_toEndOf="@id/button7"
            app:layout_constraintTop_toBottomOf="@id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button9"
            android:text="@string/key_9"
            app:layout_constraintStart_toEndOf="@id/button8"
            app:layout_constraintTop_toBottomOf="@id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button0"
            android:text="@string/key_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonEQLS"
            android:text="@string/key_equals"
            app:layout_constraintStart_toStartOf="@id/button8"
            app:layout_constraintTop_toBottomOf="@id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonPlUS"
            android:text="@string/key_plus"
            app:layout_constraintStart_toStartOf="@id/button9"
            app:layout_constraintTop_toBottomOf="@id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonSPlIT"
            android:text="@string/key_split"
            app:layout_constraintStart_toStartOf="@id/button0"
            app:layout_constraintTop_toBottomOf="@id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonMULTIPL"
            android:text="@string/key_multipl"
            app:layout_constraintStart_toStartOf="@id/buttonEQLS"
            app:layout_constraintTop_toBottomOf="@id/buttonEQLS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonMINUS"
            android:text="@string/key_minus"
            app:layout_constraintStart_toStartOf="@id/buttonPlUS"
            app:layout_constraintTop_toBottomOf="@id/buttonPlUS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>